# portfolio

./: README.md  cpp_interview_questions.md
algorithms/binary_search/: CMakeLists.txt  test.cpp
algorithms/binary_search/include/: bsearch.h
algorithms/binary_search/src/: bsearch.cpp
algorithms/fibonacci/: CMakeLists.txt  fib_demo.cpp
cpp_features/DynamicArray/: CMakeLists.txt  dynamic_array.h  test.cpp
cpp_features/DynamicPolymorphism/: CMakeLists.txt  test.cpp
cpp_features/smart_ptrs/my_shared_ptr/: CMakeLists.txt  my_shared_ptr.h  my_shared_ptr_demo.cpp
cpp_features/smart_ptrs/own_unique_ptr/: CMakeLists.txt  my_uniq_ptr_demo.cpp  my_unique_ptr.h
games/lifegame/: CMakeLists.txt
games/tetris/: CMakeLists.txt  board.h  field.h  figure.h  game.cpp  game.h  main.cpp  testris.cpp  tetris.cpp  tetris.h
strings/my_string/: CMakeLists.txt  my_simple_allocator.h  my_string.h  my_vector.h  test.cpp
